// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Renders with size '1' 1`] = `
<div
  className="Field__Test__root Field__Test---vol-1-1 Field__Test---labelPosition-3-top RadioGroup__Test__root RadioGroup__Test---orientation-8-vertical"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    id="react-aria-2"
  >
    <span
      className="Label__Test__text"
    >
      Radio Group
    </span>
  </label>
  <div
    aria-labelledby="react-aria-2"
    aria-orientation="vertical"
    className="Field__Test__fieldContainer RadioGroup__Test__group"
    id="react-aria-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="Label__Test__root Label__Test--hasInput Radio__Test__root Radio__Test---size-1-1"
    >
      <span
        className="Label__Test__text"
      >
        One
      </span>
      <span
        className="Radio__Test__inputContainer"
      >
        <input
          checked={false}
          className="Radio__Test__input"
          disabled={false}
          name="react-aria-5"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="test1"
        />
      </span>
    </label>
    <label
      className="Label__Test__root Label__Test--hasInput Radio__Test__root Radio__Test---size-1-1"
    >
      <span
        className="Label__Test__text"
      >
        Two
      </span>
      <span
        className="Radio__Test__inputContainer"
      >
        <input
          checked={false}
          className="Radio__Test__input"
          disabled={false}
          name="react-aria-5"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="test2"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Radio Renders with size '2' 1`] = `
<div
  className="Field__Test__root Field__Test---vol-1-1 Field__Test---labelPosition-3-top RadioGroup__Test__root RadioGroup__Test---orientation-8-vertical"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    id="react-aria-2"
  >
    <span
      className="Label__Test__text"
    >
      Radio Group
    </span>
  </label>
  <div
    aria-labelledby="react-aria-2"
    aria-orientation="vertical"
    className="Field__Test__fieldContainer RadioGroup__Test__group"
    id="react-aria-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="Label__Test__root Label__Test--hasInput Radio__Test__root Radio__Test---size-1-2"
    >
      <span
        className="Label__Test__text"
      >
        One
      </span>
      <span
        className="Radio__Test__inputContainer"
      >
        <input
          checked={false}
          className="Radio__Test__input"
          disabled={false}
          name="react-aria-5"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="test1"
        />
      </span>
    </label>
    <label
      className="Label__Test__root Label__Test--hasInput Radio__Test__root Radio__Test---size-1-2"
    >
      <span
        className="Label__Test__text"
      >
        Two
      </span>
      <span
        className="Radio__Test__inputContainer"
      >
        <input
          checked={false}
          className="Radio__Test__input"
          disabled={false}
          name="react-aria-5"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="test2"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Radio Renders with size '3' 1`] = `
<div
  className="Field__Test__root Field__Test---vol-1-1 Field__Test---labelPosition-3-top RadioGroup__Test__root RadioGroup__Test---orientation-8-vertical"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    id="react-aria-2"
  >
    <span
      className="Label__Test__text"
    >
      Radio Group
    </span>
  </label>
  <div
    aria-labelledby="react-aria-2"
    aria-orientation="vertical"
    className="Field__Test__fieldContainer RadioGroup__Test__group"
    id="react-aria-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="Label__Test__root Label__Test--hasInput Radio__Test__root Radio__Test---size-1-3"
    >
      <span
        className="Label__Test__text"
      >
        One
      </span>
      <span
        className="Radio__Test__inputContainer"
      >
        <input
          checked={false}
          className="Radio__Test__input"
          disabled={false}
          name="react-aria-5"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="test1"
        />
      </span>
    </label>
    <label
      className="Label__Test__root Label__Test--hasInput Radio__Test__root Radio__Test---size-1-3"
    >
      <span
        className="Label__Test__text"
      >
        Two
      </span>
      <span
        className="Radio__Test__inputContainer"
      >
        <input
          checked={false}
          className="Radio__Test__input"
          disabled={false}
          name="react-aria-5"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="test2"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Radio Renders with size '4' 1`] = `
<div
  className="Field__Test__root Field__Test---vol-1-1 Field__Test---labelPosition-3-top RadioGroup__Test__root RadioGroup__Test---orientation-8-vertical"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    id="react-aria-2"
  >
    <span
      className="Label__Test__text"
    >
      Radio Group
    </span>
  </label>
  <div
    aria-labelledby="react-aria-2"
    aria-orientation="vertical"
    className="Field__Test__fieldContainer RadioGroup__Test__group"
    id="react-aria-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="Label__Test__root Label__Test--hasInput Radio__Test__root Radio__Test---size-1-4"
    >
      <span
        className="Label__Test__text"
      >
        One
      </span>
      <span
        className="Radio__Test__inputContainer"
      >
        <input
          checked={false}
          className="Radio__Test__input"
          disabled={false}
          name="react-aria-5"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="test1"
        />
      </span>
    </label>
    <label
      className="Label__Test__root Label__Test--hasInput Radio__Test__root Radio__Test---size-1-4"
    >
      <span
        className="Label__Test__text"
      >
        Two
      </span>
      <span
        className="Radio__Test__inputContainer"
      >
        <input
          checked={false}
          className="Radio__Test__input"
          disabled={false}
          name="react-aria-5"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="test2"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Radio Renders with size '5' 1`] = `
<div
  className="Field__Test__root Field__Test---vol-1-1 Field__Test---labelPosition-3-top RadioGroup__Test__root RadioGroup__Test---orientation-8-vertical"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    id="react-aria-2"
  >
    <span
      className="Label__Test__text"
    >
      Radio Group
    </span>
  </label>
  <div
    aria-labelledby="react-aria-2"
    aria-orientation="vertical"
    className="Field__Test__fieldContainer RadioGroup__Test__group"
    id="react-aria-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="Label__Test__root Label__Test--hasInput Radio__Test__root Radio__Test---size-1-5"
    >
      <span
        className="Label__Test__text"
      >
        One
      </span>
      <span
        className="Radio__Test__inputContainer"
      >
        <input
          checked={false}
          className="Radio__Test__input"
          disabled={false}
          name="react-aria-5"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="test1"
        />
      </span>
    </label>
    <label
      className="Label__Test__root Label__Test--hasInput Radio__Test__root Radio__Test---size-1-5"
    >
      <span
        className="Label__Test__text"
      >
        Two
      </span>
      <span
        className="Radio__Test__inputContainer"
      >
        <input
          checked={false}
          className="Radio__Test__input"
          disabled={false}
          name="react-aria-5"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="test2"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Radio Renders with size '6' 1`] = `
<div
  className="Field__Test__root Field__Test---vol-1-1 Field__Test---labelPosition-3-top RadioGroup__Test__root RadioGroup__Test---orientation-8-vertical"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    id="react-aria-2"
  >
    <span
      className="Label__Test__text"
    >
      Radio Group
    </span>
  </label>
  <div
    aria-labelledby="react-aria-2"
    aria-orientation="vertical"
    className="Field__Test__fieldContainer RadioGroup__Test__group"
    id="react-aria-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="Label__Test__root Label__Test--hasInput Radio__Test__root Radio__Test---size-1-6"
    >
      <span
        className="Label__Test__text"
      >
        One
      </span>
      <span
        className="Radio__Test__inputContainer"
      >
        <input
          checked={false}
          className="Radio__Test__input"
          disabled={false}
          name="react-aria-5"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="test1"
        />
      </span>
    </label>
    <label
      className="Label__Test__root Label__Test--hasInput Radio__Test__root Radio__Test---size-1-6"
    >
      <span
        className="Label__Test__text"
      >
        Two
      </span>
      <span
        className="Radio__Test__inputContainer"
      >
        <input
          checked={false}
          className="Radio__Test__input"
          disabled={false}
          name="react-aria-5"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="test2"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Radio renders as vertical 1`] = `
<div
  className="Field__Test__root Field__Test---vol-1-1 Field__Test---labelPosition-3-top RadioGroup__Test__root RadioGroup__Test---orientation-8-vertical"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    id="react-aria-2"
  >
    <span
      className="Label__Test__text"
    >
      Radio Group
    </span>
  </label>
  <div
    aria-labelledby="react-aria-2"
    aria-orientation="vertical"
    className="Field__Test__fieldContainer RadioGroup__Test__group"
    id="react-aria-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="Label__Test__root Label__Test--hasInput Radio__Test__root Radio__Test---size-1-1"
    >
      <span
        className="Label__Test__text"
      >
        One
      </span>
      <span
        className="Radio__Test__inputContainer"
      >
        <input
          checked={false}
          className="Radio__Test__input"
          disabled={false}
          name="react-aria-5"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="test1"
        />
      </span>
    </label>
    <label
      className="Label__Test__root Label__Test--hasInput Radio__Test__root Radio__Test---size-1-1"
    >
      <span
        className="Label__Test__text"
      >
        Two
      </span>
      <span
        className="Radio__Test__inputContainer"
      >
        <input
          checked={false}
          className="Radio__Test__input"
          disabled={false}
          name="react-aria-5"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="test2"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Radio renders correctly with label 1`] = `
<div
  className="Field__Test__root Field__Test---vol-1-1 Field__Test---labelPosition-3-top RadioGroup__Test__root RadioGroup__Test---orientation-8-vertical"
>
  <label
    className="Label__Test__root Field__Test__inputLabel"
    id="react-aria-2"
  >
    <span
      className="Label__Test__text"
    >
      Radio Group
    </span>
  </label>
  <div
    aria-labelledby="react-aria-2"
    aria-orientation="vertical"
    className="Field__Test__fieldContainer RadioGroup__Test__group"
    id="react-aria-1"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="Label__Test__root Label__Test--hasInput Radio__Test__root Radio__Test---size-1-1"
    >
      <span
        className="Label__Test__text"
      >
        One
      </span>
      <span
        className="Radio__Test__inputContainer"
      >
        <input
          checked={false}
          className="Radio__Test__input"
          disabled={false}
          name="react-aria-5"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="test1"
        />
      </span>
    </label>
    <label
      className="Label__Test__root Label__Test--hasInput Radio__Test__root Radio__Test---size-1-1"
    >
      <span
        className="Label__Test__text"
      >
        Two
      </span>
      <span
        className="Radio__Test__inputContainer"
      >
        <input
          checked={false}
          className="Radio__Test__input"
          disabled={false}
          name="react-aria-5"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          required={false}
          tabIndex={0}
          type="radio"
          value="test2"
        />
      </span>
    </label>
  </div>
</div>
`;
